<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="spinnerlijst">
<item>Stof</item>
<item>Light</item>
<item>Stank</item>
<item>Geluid</item>
</string-array>
    
    
    
    <string name="app_name">RotterdamRadar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Onderwerp</string>
    <string name="snippet">Melding</string>
    <string name="mobiel">Vul hier uw telefoonnummer in</string>
    <string name="mail">Vul hier uw mailadres in</string>
    <string name="postcode">Vul hier uw postcode in</string>
    <string name="onderwerp">aard van de overlast</string>
    <string name="onderwerp1">sub aard van de overlast </string>
    <string name="onderwerp2">sub sub aard overlast</string>
    <string name="onderwerp3">Wilt u terugkoppeling</string>
    <string name="verzenden">Verzenden</string>
    <string name="bericht">nog meer toelichting</string>
    <string name="woonplaats">Vul hier uw woonplaats in</string>
    <string name="straatnaam">Vul hier uw straatnaam in</string>
    <string name="contact">Hier kunt u een klacht/opmerking plaatsen</string>
    <string name="terugkoppeling">Terugkoppeling</string>
    <string name="toelichting">Toelichting</string>
    <string name="appgebruik"><b>Hoe werkt het klachtencentrum?</b> \n \n
        Als u een klacht wilt plaatsen via het klachtencentrum moet u de eerste keer uw gegevens invullen. De volgende keren zal de app dat voor u onthouden. \n
        U kunt uw eigen klachten zien via Mijn Klachten en alle klachten van andere mensen zijn geanonimiseerd en kunt u zien via Alle Klachten.
    </string>
    <string name="naam">Vul hier uw naam in</string>
    <string name="info">De DCMR werkt voor bewoners, bedrijven en de overheid.\n\n
    Ruim 1,2 miljoen bewoners van het Rijnmondgebied kunnen bij ons 24 uur per dag hun milieuklachten kwijt, maar ook vragen stellen over het milieu in het gebied. Meer dan 22.000 bedrijven vragen bij ons hun vergunning aan. Sommigen krijgen een vergunning op maat, anderen hoeven slechts hun activiteiten te melden. Ook neemt DCMR met zijn milieuexpertise deel in projecten in binnen- en buitenland.\n
    \n<b>Historie</b>\n
    De feitelijke oprichting van de DCMR dateert van 1971. De toenmalige Rijnmondraad besloot in dat jaar, gelet op de grote concentratie van milieubelastende activiteiten in een verstedelijkt gebied, tot oprichting van de Dienst Centraal Milieubeheer Rijnmond.\n\n
    Tussen de verschillende vormen van milieubelasting bestaat in het gebied een belangrijke samenhang, enerzijds vanwege cumulatieve effecten, anderzijds doordat de milieubelastingen vaak zijn terug te voeren op dezelfde bedrijfssectoren. Een gezamenlijke inspanning, waarbij provincie en gemeenten samenwerken, is voor de aanpak van de milieubelasting noodzakelijk.\n</string>
	<string name="appinfo">Deze app is om klachten in te dienen bij de dcmr \n \n
	    Als u een klacht wilt indienen bij de dcmr kunt u de map openen. Vervolgens drukt u op de map en kunt u gegevens invoeren over de klacht. U kunt ook een foto toevoegen zodat de dcmr direct kan zien wat de klacht is. 
	    \n Ook kunt u het klachtenformulier invullen. Dit werkt op dezelfde manier als op de dcmr website en stuurt vervolgens het formulier naar het mailadres van de dcmr.
	     Verder kunt u in deze app nog informatie vinden over de dcmr en de laatste nieuwsberichten van de dcmr.</string>

</resources>