<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fillViewport="true" >
  <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textviewnaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000033"
        android:text="@string/naam" />


   

    
     <TextView
        android:id="@+id/textviewaard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="Hieronder ziet u de aard van de door u ingevulde overlast" />

    
    
    <TextView
        android:id="@+id/textviewsubaard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="Hieronder ziet u de sub aard van de door u ingevulde overlast" />
    
     <TextView
         android:id="@+id/textviewsubsubaard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="Hieronder ziet u de sub sub aard van de door u ingevulde overlast" />
    
     <TextView
	    android:id="@+id/textviewlocatiestad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/toelichting" />
     
     <TextView
	    android:id="@+id/textviewlocatiestraat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/toelichting" />
     
	<TextView
	    android:id="@+id/textviewtoelichting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/toelichting" />
    


    
    <TextView
        android:id="@+id/textviewstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="Bekijk de voortgang van uw klacht" />
    

    </LinearLayout>
</ScrollView>
</LinearLayout>
